feat: Implementa autenticaÃ§Ã£o por API Key e sistema de configuraÃ§Ãµes
- Adiciona autenticaÃ§Ã£o X-API-Key para API pÃºblica
- Cria sistema de gerenciamento de API Keys
- Adiciona pÃ¡gina de ConfiguraÃ§Ãµes no frontend
- Atualiza PublicCarroController para usar X-API-Key
- Adiciona configuraÃ§Ãµes de produÃ§Ã£o (application-prod.properties)
- Cria scripts de build para produÃ§Ã£o
- Adiciona documentaÃ§Ã£o de deploy (DEPLOY.md)
- Atualiza .gitignore para arquivos de produÃ§Ã£o